samples/_failures_safe/1761266452_75f55b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_250ddfe1.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_250ddfe1.c:156:14: error: expected ‘;’ at end of input
  156 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_250ddfe1.c:156:9: error: expected declaration or statement at end of input
  156 |         token
      |         ^~~~~
./samples/SAFE/__tmp_250ddfe1.c:156:9: error: expected declaration or statement at end of input
